update validation workflow

--- a/.github/workflows/validate-test.yml
+++ b/.github/workflows/validate-test.yml
@@ -46,8 +46,30 @@ jobs:
           sf apex run test \
             --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
             --wait 20 \
-            --result-format human \
+            --result-format json \
             --output-dir test-results
+
+      - name: Generate Test Results CSV
+        run: |
+          sudo apt-get update && sudo apt-get install -y jq
+          RESULTS_FILE=$(find test-results -name "*.json" | head -n 1)
+          echo "TEST NAME,OUTCOME,MESSAGE,RUNTIME" > test-results/apex-test-summary.csv
+          jq -r '.result.tests[] | [.methodName, .outcome, (.message // ""), (.runTime // 0)] | @csv' "$RESULTS_FILE" >> test-results/apex-test-summary.csv
+
+          # Calculate Pass, Fail, Skip Rates
+          TOTAL=$(jq '.result.tests | length' "$RESULTS_FILE")
+          PASSED=$(jq '[.result.tests[] | select(.outcome=="Pass")] | length' "$RESULTS_FILE")
+          FAILED=$(jq '[.result.tests[] | select(.outcome=="Fail")] | length' "$RESULTS_FILE")
+          SKIPPED=$(jq '[.result.tests[] | select(.outcome=="Skip")] | length' "$RESULTS_FILE")
+
+          PASS_RATE=$(awk "BEGIN {printf \"%.2f\", (${PASSED}/${TOTAL}) * 100}")
+          FAIL_RATE=$(awk "BEGIN {printf \"%.2f\", (${FAILED}/${TOTAL}) * 100}")
+          SKIP_RATE=$(awk "BEGIN {printf \"%.2f\", (${SKIPPED}/${TOTAL}) * 100}")
+
+          echo ",,,," >> test-results/apex-test-summary.csv
+          echo "Pass Rate,${PASS_RATE}%" >> test-results/apex-test-summary.csv
+          echo "Fail Rate,${FAIL_RATE}%" >> test-results/apex-test-summary.csv
+          echo "Skip Rate,${SKIP_RATE}%" >> test-results/apex-test-summary.csv
 
       - name: Upload Test Results
         if: always()
