--- a/.github/workflows/validate-test.yml
+++ b/.github/workflows/validate-test.yml
@@ -9,9 +9,55 @@ on:
         default: 'false'
 
 jobs:
-  validate-and-deploy:
+  pmd-run:
     runs-on: ubuntu-latest
+    outputs:
+      pmd_status: ${{ steps.set-result.outputs.status }}
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
 
+      - name: Install PMD
+        run: |
+          PMD_VERSION=$(cat pmd/pmd-version.txt)
+          wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F$PMD_VERSION/pmd-bin-$PMD_VERSION.zip
+          unzip pmd-bin-$PMD_VERSION.zip -d ~
+          mv ~/pmd-bin-$PMD_VERSION ~/pmd
+          ~/pmd/bin/run.sh pmd --version
+
+      - name: Run PMD scan
+        id: pmd-scan
+        run: |
+          mkdir -p reports
+          echo "Problem,Package,File,Priority,Line,Description,Rule,Ruleset" > reports/pmd-results.csv
+
+          if [ -z "$(find ./force-app/main/default/classes -type f -name '*.cls')" ]; then
+            echo "No .cls files found"
+          else
+            find ./force-app/main/default/classes -type f -name '*.cls'
+          fi
+
+          ~/pmd/bin/run.sh pmd -d ./force-app/main/default/classes -R pmd/ruleset.xml -f csv --force-language apex >> reports/pmd-results.csv || echo "PMD exited with non-zero status"
+
+      - name: Set PMD result output
+        id: set-result
+        run: |
+          if [ -f reports/pmd-results.csv ] && [ $(wc -l < reports/pmd-results.csv) -gt 1 ]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
+          else
+            echo "status=success" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Upload PMD report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pmd-report
+          path: reports/pmd-results.csv
+
+  validate-and-deploy:
+    needs: pmd-run
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
