--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ yarn-error.log*
 
 # Dependency directories
 node_modules/
+manifest/PendingProdManifests/
+manifest/archievedPackage/
 
 # Eslint cache
 .eslintcache
