--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ yarn-error.log*
 
 # Dependency directories
 node_modules/
-manifest/PendingProdManifests/
-manifest/archievedPackage/
+# manifest/PendingProdManifests/
+# manifest/archievedPackage/
 
 # Eslint cache
 .eslintcache
