--- a/.github/workflows/SFDC-PROD-deploy.yml
+++ b/.github/workflows/SFDC-PROD-deploy.yml
@@ -94,7 +94,7 @@ jobs:
           set -e  # Exit immediately if a command fails
 
           VALIDATION_OUTPUT=$(sf project deploy start \
-          --manifest manifest/package.xml \
+          --manifest manifest/PendingProdManifests/package.xml \
           --test-level RunSpecifiedTests \
           --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
           --target-org prod-org \
@@ -114,7 +114,7 @@ jobs:
           
           echo "Starting deployment..."
           sf project deploy start \
-            --manifest manifest/package.xml \
+            --manifest manifest/PendingProdManifests/package.xml \
             --test-level RunSpecifiedTests \
             --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
             --target-org prod-org \
@@ -145,7 +145,7 @@ jobs:
           done
       
           # Move to archive
-          mv manifest/package.xml "$DEST_PATH"
+          mv manifest/PendingProdManifests/package.xml "$DEST_PATH"
           echo "Moved and renamed package.xml to $DEST_PATH"
 
           echo "Checking manifest/PendingProdManifests/package.xml existence..."
